--- a/css/style.css
+++ b/css/style.css
@@ -7,17 +7,19 @@
     scroll-behavior: smooth;
     font-family: "Poppins", sans-serif;
 }
+
 :root {
     --bg-color: #080808;
     --second-bg-color: #101010;
     --text-color: white;
     --main-color: #660ff0;
-    /* --vid-main-color: #ea580c; */
 }
+
 html {
     font-size: 60%;
     overflow-x: hidden;
 }
+
 body {
     background-color: var(--bg-color);
     color: var(--text-color);
@@ -37,30 +39,33 @@ body {
     align-items: center;
     z-index: 100;
 }
+
 #menu-icon {
     font-size: 3.5rem;
     color: var(--main-color);
     display: none;
 }
+
 .logo {
     font-size: 3rem;
     color: var(--text-color);
     font-weight: 800;
     cursor: pointer;
     transition: 0.3 ease-in-out;
-} .logo:hover {
+}
+
+.logo:hover {
     transform: scale(1.1);
 }
+
 span {
-    /* background: linear-gradient(270deg, #DF8908 10%, #ff1d15 100%); */
-    background: linear-gradient(
-        270deg,
-        #9408df 10%,
-        #157eff 100%
-    );
+    background: linear-gradient(270deg,
+            #9408df 10%,
+            #157eff 100%);
     background-clip: text;
     color: transparent;
 }
+
 .navbar a {
     font-size: 1.8rem;
     color: var(--text-color);
@@ -68,7 +73,9 @@ span {
     font-weight: 400;
     transition: 0.3 ease-in-out;
     border-bottom: 3px solid transparent;
-} .navbar a:hover {
+}
+
+.navbar a:hover {
     color: var(--main-color);
     border-bottom: 3px solid var(--main-color);
 }
@@ -77,18 +84,18 @@ span {
     font-size: 1.8rem;
     padding: 1rem 2rem;
     border-radius: 3rem;
-    background: linear-gradient(
-        270deg,
-        #9408df 10%,
-        #157eff 100%
-    );
+    background: linear-gradient(270deg,
+            #9408df 10%,
+            #157eff 100%);
     letter-spacing: 1px;
     cursor: pointer;
     transition: 0.3s ease-in-out;
     color: white;
     border: none;
     text-wrap: nowrap;
-} .gradient-btn:hover {
+}
+
+.gradient-btn:hover {
     transform: scale(1.05);
 }
 
@@ -97,44 +104,53 @@ section {
     min-height: 100vh;
     padding: 10rem 15%;
 }
+
 .home {
     display: flex;
     align-items: center;
     justify-content: center;
     gap: 15rem;
 }
+
 .home-content {
     display: flex;
     flex-direction: column;
     align-items: flex-end;
     text-align: right;
 }
+
 .home-content h1 {
     font-size: 8rem;
     font-weight: 700;
     margin-top: 1.5rem;
     line-height: 1;
 }
+
 .home-content h3 {
     margin: 1rem 0;
     font-size: 4rem;
 }
+
 .home-content p {
     font-size: 1.5rem;
     font-weight: 500;
     line-height: 1.8;
 }
+
 .home-img img {
     width: 32vw;
     border-radius: 50%;
     box-shadow: 0 0 25px var(--main-color);
     transition: 0.4s ease-in-out;
-} .home-img img:hover {
-    box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color),
-                0 0 100px var(--main-color);
 }
-.social-icons a{
+
+.home-img img:hover {
+    box-shadow: 0 0 25px var(--main-color),
+        0 0 50px var(--main-color),
+        0 0 100px var(--main-color);
+}
+
+.social-icons a {
     display: inline-flex;
     justify-content: center;
     align-items: center;
@@ -146,16 +162,20 @@ section {
     color: var(--main-color);
     margin: 3rem 0.5rem;
     transition: 0.3 ease-in-out;
-} .social-icons a:hover {
+}
+
+.social-icons a:hover {
     color: var(--text-color);
     background-color: var(--main-color);
     transform: scale(1.2)translateY(-5px);
     box-shadow: 0 0 25px var(--main-color);
 }
+
 .btn-group {
     display: flex;
     gap: 1.5rem;
 }
+
 .btn {
     display: inline-block;
     padding: 1rem 3rem;
@@ -167,17 +187,22 @@ section {
     border: 2px solid transparent;
     font-weight: 600;
     transition: 0.3s ease-in-out;
-} .btn:hover {
+}
+
+.btn:hover {
     transform: scale(1.05);
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
+        0 0 50px var(--main-color);
 }
+
 .btn-group a:nth-of-type(2) {
     background-color: black;
     color: var(--main-color);
     border: 2px solid var(--main-color);
     box-shadow: 0 0 25px transparent;
-} .btn-group a:nth-of-type(2):hover {
+}
+
+.btn-group a:nth-of-type(2):hover {
     box-shadow: 0 0 25px var(--main-color);
     background-color: var(--main-color);
     color: white;
@@ -191,36 +216,157 @@ section {
     gap: 10rem;
     background: var(--second-bg-color);
 }
+
 .about-img img {
     width: 32vw;
     border-radius: 50%;
     box-shadow: 0 0 25px var(--main-color);
     transition: 0.4s ease-in-out;
-} .about-img img:hover {
-    box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color),
-                0 0 100px var(--main-color);
 }
+
+.about-img img:hover {
+    box-shadow: 0 0 25px var(--main-color),
+        0 0 50px var(--main-color),
+        0 0 100px var(--main-color);
+}
+
 .about-content h2 {
     font-size: 7rem;
     text-align: left;
 }
-.about-content p {
+
+.about-content p, .p-rm {
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
+    text-align: justify;
 }
+
 .about-content .btn {
     margin: 3rem 0;
+}
+
+/*About Section Read More Timeline*/
+#active-rm {
+    max-height: 0;
+    overflow: hidden;
+    opacity: 0;
+    transition: max-height 0.5s ease-out, opacity 0.5s ease-in-out;
+}
+
+#active-rm.expanded {
+    max-height:fit-content;
+    opacity: 1;
+}
+
+#read-more {
+    display: inline-block;
+}
+
+.timeline-section {
+    min-height: 100vh;
+    padding: 100px 15px;
+}
+
+.timeline-items {
+    max-width: 1000px;
+    margin: auto;
+    display: flex;
+    flex-wrap: wrap;
+    position: relative;
+}
+
+.timeline-items::before {
+    content: '';
+    position: absolute;
+    width: 5px;
+    height: 100%;
+    background-color: white;
+    left: calc(50% - 1px);
+    border-radius: 75%;
+}
+
+.timeline-item {
+    margin-bottom: 40px;
+    width: 100%;
+    position: relative;
+}
+
+.timeline-item:last-child {
+    margin-bottom: 0;
+}
+
+.timeline-item:nth-child(odd) {
+    padding-right: calc(50% + 30px);
+    text-align: right;
+}
+
+.timeline-item:nth-child(even) {
+    padding-left: calc(50% + 30px);
+}
+
+.timeline-dot {
+    height: 21px;
+    width: 21px;
+    background-color: var(--main-color);
+    position: absolute;
+    left: calc(50% - 8px);
+    border-radius: 50%;
+    top: 10px;
+}
+
+.timeline-date {
+    font-size: 20px;
+    font-weight: 800;
+    color: white;
+    margin: 6px 0 15px;
+}
+
+.timeline-content {
+    /* background-color: var(--main-color); */
+    background: linear-gradient(270deg,
+            #9408df 10%,
+            #157eff 100%);
+    backdrop-filter: blur(20px);
+    border: 1px solid var(--main-color);
+    padding: 30px;
+    border-radius: 1em;
+    cursor: pointer;
+    transition: 0.3s ease;
+}
+
+.timeline-content:hover {
+    background: var(--second-bg-color);
+    color: var(--main-color);
+    transform: scale(1.05);
+}
+
+.timeline-content h3 {
+    font-size: 20px;
+    color: white;
+    margin: 0 0 10px;
+    text-transform: capitalize;
+    font-weight: 500;
+}
+
+.timeline-content p {
+    color: white;
+    opacity: 0.8;
+    font-size: 16px;
+    font-weight: 400;
+    line-height: 22px;
 }
 
 /* SCROLL-BAR */
 ::-webkit-scrollbar {
     width: 20px;
 }
+
 ::-webkit-scrollbar-thumb {
     background-color: var(--main-color);
+    border-radius: 50px;
 }
+
 ::-webkit-scrollbar-track {
     background-color: var(--bg-color);
 }
@@ -231,19 +377,23 @@ section {
     font-size: 7rem;
     margin: 5rem 0;
 }
+
 .services {
     background-color: var(--bg-color);
     color: black;
 }
+
 .services h2 {
     color: var(--text-color);
 }
+
 .services-container {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
     align-items: center;
     gap: 2.5rem;
 }
+
 .service-box {
     display: flex;
     justify-content: center;
@@ -254,12 +404,15 @@ section {
     cursor: pointer;
     border: 5px solid transparent;
     transition: 0.4s ease-in-out;
-} .service-box:hover {
+}
+
+.service-box:hover {
     background: var(--second-bg-color);
     color: var(--main-color);
     border: 5px solid var(--main-color);
     transform: scale(1.03);
 }
+
 .service-info {
     display: flex;
     flex-direction: column;
@@ -268,16 +421,19 @@ section {
     align-items: center;
     padding: 5rem;
 }
+
 .service-info h4 {
     font-size: 4rem;
     margin: 2rem 0;
     font-weight: 800;
 }
+
 .service-info p {
     font-size: 1.4rem;
     font-weight: 600;
     line-height: 1.7;
 }
+
 .service-info i {
     font-size: 8rem;
 }
@@ -286,6 +442,7 @@ section {
 .projects {
     background-color: var(--second-bg-color);
 }
+
 .projects-box {
     display: grid;
     grid-template-columns: repeat(auto-fit, minmax(350px, 1fr));
@@ -293,6 +450,7 @@ section {
     gap: 3rem;
     row-gap: 5rem;
 }
+
 .project-card {
     display: flex;
     flex-direction: column;
@@ -308,19 +466,24 @@ section {
     cursor: pointer;
     box-shadow: 0 0 5px var(--main-color);
     transition: 0.3s ease;
-} .project-card:hover {
+}
+
+.project-card:hover {
     box-shadow: 0 0 25px var(--main-color),
-                0 0 50px var(--main-color);
+        0 0 50px var(--main-color);
     transform: scale(1.02);
 }
+
 .project-card img {
     max-width: 300px;
     border-radius: 2em;
     object-fit: cover;
 }
+
 .project-card h3 {
     font-size: 3rem;
 }
+
 .project-card p {
     font-size: 1.6rem;
 }
@@ -329,10 +492,12 @@ section {
 .contact {
     background-color: var(--bg-color);
 }
+
 .contact h2 {
     margin-bottom: 3rem;
     color: var(--text-color);
 }
+
 .contact form {
     display: flex;
     align-items: center;
@@ -341,7 +506,9 @@ section {
     margin: 5rem 0;
     text-align: center;
 }
-.contact form .input-box input, .contact form textarea {
+
+.contact form .input-box input,
+.contact form textarea {
     width: 100%;
     padding: 2.5rem;
     font-size: 1.8rem;
@@ -358,23 +525,30 @@ section {
     background-color: var(--second-bg-color);
     padding: 50px 0;
 }
+
 .footer .social-icons {
     text-align: center;
 }
+
 .footer ul {
     text-align: center;
 }
+
 .footer ul li {
     display: inline-block;
     margin-left: 20px;
 }
+
 .footer ul li a {
     color: white;
     border-bottom: 3px solid transparent;
     transition: 0.3s ease-in-out;
-} .footer ul li a:hover {
+}
+
+.footer ul li a:hover {
     border-bottom: 3px solid var(--main-color);
 }
+
 .footer .copyright {
     text-align: center;
     margin-top: 40px;
@@ -385,6 +559,7 @@ section {
     #menu-icon {
         display: block;
     }
+
     .navbar {
         position: absolute;
         top: 100%;
@@ -397,42 +572,70 @@ section {
         border-bottom: 2px solid var(--main-color);
         display: none;
     }
+
     .navbar a {
         display: block;
         font-size: 2rem;
         margin: 3rem 0;
         color: var(--text-color);
     }
+
     .navbar.active {
         display: block;
     }
+
     .gradient-btn {
         display: none;
     }
+
     .home {
         flex-direction: column-reverse;
         margin: 5rem 0;
         gap: 5rem;
     }
+
     .home-content {
         align-items: center;
         text-align: center;
     }
+
     .home-img img {
         width: 56vw;
     }
+
     .about {
         flex-direction: column-reverse;
         text-align: center;
     }
+
     .about h2 {
         text-align: center;
         margin: 2rem 0;
     }
+
     .about img {
         width: 52vw;
     }
+
     .contact form {
         flex-direction: column;
+    }
+
+    .timeline-items::before {
+        left: 7px;
+    }
+
+    .timeline-item:nth-child(odd) {
+        padding-right: 0;
+        text-align: left;
+    }
+
+    .timeline-item:nth-child(odd),
+    .timeline-item:nth-child(even) {
+        padding-left: 37px;
+    }
+
+    .timeline-dot {
+        left: 0;
     }
 }
