--- a/css/style.css
+++ b/css/style.css
@@ -239,7 +239,7 @@ section {
     font-size: 1.8rem;
     font-weight: 500;
     line-height: 1.5;
-    text-align: justify;
+    text-align: left;
 }
 
 .about-content .btn {
