--- a/css/form-submit.css
+++ b/css/form-submit.css
@@ -1,7 +1,8 @@
 .submit-form {
     display: flex;
     flex-direction: column;
-    justify-content: center;
+    align-items: center;
+    /* justify-content: center; */
     gap: 2rem;
 }
 .submit-form-content {
